--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,14 @@
     padding:18px; display:flex; flex-direction:column; gap:14px; height:auto;
   }
 
+  @media (max-width: 820px){
+  body{
+    overflow-y:auto;
+    -webkit-overflow-scrolling:touch;
+  }
+}
+
+
   .row{display:grid; grid-template-columns:1fr 1fr; gap:12px}
   @media(max-width:720px){ .row{grid-template-columns:1fr} }
   .label{color:var(--muted); font-size:13px; margin-bottom:6px}
