--- a/web/index.html
+++ b/web/index.html
@@ -239,7 +239,7 @@
     </div>
   </div>
 
-  <footer>API: http://127.0.0.1:5000/predict_from_fields · พร้อมใช้งานจริง</footer>
+  <footer>© 2025 Flood Risk Predictor. All rights reserved.</footer>
 </div>
 
 <script>
